--- a/README.rdoc
+++ b/README.rdoc
@@ -14,6 +14,8 @@ as a plugin:
   
 == USAGE
 
+require 'ansi' # if not installed as a plugin.
+
 1) Simply control the cursor:
   >> puts "HELLO" + ANSI.right(30) + "THERE!"
   HELLO                              THERE!
